--- a/BIN/AtomSkills.config
+++ b/BIN/AtomSkills.config
@@ -8,7 +8,7 @@
   <!-- Блок настроек работы с базой данных -->
   <Database>
     <!-- Используемая СУБД (поддерживается SQLITE, MYSQL, ORACLE, MSSQL, POSTGRESQL) -->
-    <Dbms>SQLITE</Dbms>
+    <Dbms>ORACLE</Dbms>
     <!-- Блок настроек соединения с БД ORACLE -->
     <ConnectionInfo Type="AtomSkills.Helpers.NHibernate.OracleConnectionInfo">
     </ConnectionInfo>
